Input type check comparision should be an ASCII case-insensitive match.

Currently we use unicode-careless matching,which is wrong.
so ASCII -caseless matching is used now.

BUG=728515

Review-Url: https://codereview.chromium.org/2918033003
Cr-Commit-Position: refs/heads/master@{#477786}

Former-commit-id: b1bf7d6b39cc77b38b433873a3db686dc3a0ca73